--- a/src/index.html
+++ b/src/index.html
@@ -80,9 +80,25 @@
                     <img src="../../../icons/shoe.png" alt="" class="benefits__img">
                     <div class="benefits__subheader">Учим бегать</div>
                     <div class="benefits__desc">Помогаем с обучением правильной технике бега!
-                         Дружим с крупнейшей школой бега в России - I LOVE RUNNING.</div>
+                         Дружим с крупнейшей школой бега в России - <a href="#">I LOVE RUNNING.</a></div>
                 </div>
             </div>
+        </div>
+    </div>
+
+    <div class="consultation">
+        <div class="container">
+            <h2 class="title">Получите бесплатную консультацию <br>
+                по подбору пульсометра </h2>
+            <div class="consultation__descr">Просто заполните форму заявки <br>
+                и мы перезвоним вам в течении 10 минут</div>
+            <form class="feed-form" action="#">
+                <input name="name" required placeholder="Ваше имя" type="text">
+                <input name="phone" required placeholder="Ваш телефон" type="number">
+                <input name="email" required placeholder="Ваш E-mail" type="email">
+
+                <button class="button button_submit">заказать кОНСУЛЬТАЦИЮ</button>
+            </form>
         </div>
     </div>
     
